--- a/Web Page Hyperlink Task/contact.html
+++ b/Web Page Hyperlink Task/contact.html
@@ -1,9 +1,29 @@
 <html>
-    <head> <title> Alpha Web Store </title></head>
-    <body>
-        <h1 align="center" > <font color ="#089600" size = "10"> Alpha Store </font> </h1>
-        <br>
+    <head> 
+        <style> 
+        .logo1{
+            margin-left: 300px;
+        }
+
+        .alpha{
+            margin-top: -80px;
+        }
         
+        .logo2{
+            margin-left: 1100px;
+            margin-top: -98px;
+        }
+
+        </style>
+    </head>
+    <body>
+        <header> 
+            <img src="AlphaLogo.jpg" class="logo1" height="100px" width="100px">
+            <h1 align="center" class="alpha"> <font color ="#089600" size = "10"> Alpha Web Store </font></h1>
+            <img src="AlphaLogo.jpg" class="logo2" height="100px" width="100px">
+        </header>
+
+        <br>
         <a href="Hyperlink.html" > Home </a>
         <a href="about.html" > About</a>
         <a href="services.html" > Services</a>
